@@ -16,6 +16,7 @@
 
 package org.openmetadata.service.resources.glossary;
 
+import static java.util.Collections.emptyList;
 import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
 import static javax.ws.rs.core.Response.Status.FORBIDDEN;
 import static javax.ws.rs.core.Response.Status.NOT_FOUND;
@@ -30,6 +31,7 @@ import static org.openmetadata.service.exception.CatalogExceptionMessage.entityI
 import static org.openmetadata.service.exception.CatalogExceptionMessage.glossaryTermMismatch;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.notReviewer;
 import static org.openmetadata.service.resources.databases.TableResourceTest.getColumn;
+import static org.openmetadata.service.resources.glossary.GlossaryResourceTest.waitForTaskToBeCreated;
 import static org.openmetadata.service.security.SecurityUtil.authHeaders;
 import static org.openmetadata.service.util.EntityUtil.fieldAdded;
 import static org.openmetadata.service.util.EntityUtil.fieldDeleted;
@@ -45,6 +47,8 @@ import static org.openmetadata.service.util.TestUtils.UpdateType.REVERT;
 
 import java.io.IOException;
 import java.net.URI;
+import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
@@ -54,8 +58,11 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
+import java.util.function.Predicate;
 import javax.ws.rs.core.Response;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.http.client.HttpResponseException;
+import org.awaitility.Awaitility;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
@@ -76,6 +83,7 @@ import org.openmetadata.schema.entity.type.Style;
 import org.openmetadata.schema.type.ChangeDescription;
 import org.openmetadata.schema.type.Column;
 import org.openmetadata.schema.type.EntityReference;
+import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.TagLabel;
 import org.openmetadata.schema.type.TaskDetails;
 import org.openmetadata.schema.type.TaskStatus;
@@ -90,8 +98,10 @@ import org.openmetadata.service.util.FullyQualifiedName;
 import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.util.ResultList;
 import org.openmetadata.service.util.TestUtils;
+import org.testcontainers.shaded.com.google.common.collect.Lists;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
+@Slf4j
 public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, CreateGlossaryTerm> {
   private final GlossaryResourceTest glossaryTest = new GlossaryResourceTest();
   private final FeedResourceTest taskTest = new FeedResourceTest();
@@ -113,7 +123,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // - term1
     //   - term11
     //   - term12
-    Glossary glossary1 = createGlossary("glossãry1", null, null);
+    Glossary glossary1 = createGlossary("glossãry1", null, emptyList());
 
     GlossaryTerm term1 = createTerm(glossary1, null, "term1");
     GlossaryTerm term11 = createTerm(glossary1, term1, "term11");
@@ -178,7 +188,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     // When reviewers are not set for a glossary term, carry it forward from the glossary
     //
-    Glossary glossary = createGlossary(test, listOf(USER1_REF), USER2_REF);
+    Glossary glossary = createGlossary(test, listOf(USER1_REF), List.of(USER2_REF));
 
     // Create term t1 in the glossary without reviewers and owner
     CreateGlossaryTerm create =
@@ -187,7 +197,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
             .withGlossary(glossary.getFullyQualifiedName())
             .withDescription("desc");
     GlossaryTerm t1 = assertOwnerInheritance(create, USER2_REF);
-    t1 = getEntity(t1.getId(), "reviewers,owner", ADMIN_AUTH_HEADERS);
+    t1 = getEntity(t1.getId(), "reviewers,owners", ADMIN_AUTH_HEADERS);
     assertEntityReferences(glossary.getReviewers(), t1.getReviewers()); // Reviewers are inherited
 
     // Create term t12 under t1 without reviewers and owner
@@ -197,12 +207,12 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
             .withGlossary(glossary.getFullyQualifiedName())
             .withParent(t1.getFullyQualifiedName());
     GlossaryTerm t12 = assertOwnerInheritance(create, USER2_REF);
-    t12 = getEntity(t12.getId(), "reviewers,owner", ADMIN_AUTH_HEADERS);
+    t12 = getEntity(t12.getId(), "reviewers,owners", ADMIN_AUTH_HEADERS);
     assertEntityReferences(glossary.getReviewers(), t12.getReviewers()); // Reviewers are inherited
   }
 
   @Test
-  void test_inheritDomain(TestInfo test) throws IOException, InterruptedException {
+  void test_inheritDomain(TestInfo test) throws IOException {
     // When domain is not set for a glossary term, carry it forward from the glossary
     CreateGlossary createGlossary =
         glossaryTest.createRequest(test).withDomain(DOMAIN.getFullyQualifiedName());
@@ -350,6 +360,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // Creating a glossary term g2t1 should be in `Draft` mode (because glossary has reviewers)
     GlossaryTerm g2t1 = createTerm(glossary2, null, "g2t1");
     assertEquals(Status.DRAFT, g2t1.getStatus());
+    waitForTaskToBeCreated(g2t1.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t1.getId(), authHeaders(USER1.getName())).getStatus());
     assertApprovalTask(g2t1, TaskStatus.Open); // A Request Approval task is opened
 
     // Non reviewer - even Admin - can't change the `Draft` to `Approved` status using PATCH
@@ -373,6 +386,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     GlossaryTerm g2t2 = createTerm(glossary2, null, "g2t2");
     assertEquals(Status.DRAFT, g2t2.getStatus());
+    waitForTaskToBeCreated(g2t2.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t2.getId(), authHeaders(USER1.getName())).getStatus());
     Thread approvalTask =
         assertApprovalTask(g2t2, TaskStatus.Open); // A Request Approval task is opened
     int taskId = approvalTask.getTask().getId();
@@ -398,17 +414,23 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     GlossaryTerm g2t3 = createTerm(glossary2, null, "g2t3");
     assertEquals(Status.DRAFT, g2t3.getStatus());
+    waitForTaskToBeCreated(g2t3.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t3.getId(), authHeaders(USER1.getName())).getStatus());
     approvalTask = assertApprovalTask(g2t3, TaskStatus.Open); // A Request Approval task is opened
     int taskId2 = approvalTask.getTask().getId();
 
     // Even admin can't close the task
     assertResponse(
-        () -> taskTest.closeTask(taskId2, "comment", ADMIN_AUTH_HEADERS),
+        () ->
+            taskTest.resolveTask(
+                taskId2, new ResolveTask().withNewValue("rejected"), ADMIN_AUTH_HEADERS),
         FORBIDDEN,
         notReviewer("admin"));
 
     // Reviewer closes the task. Glossary term is rejected. And task is resolved.
-    taskTest.closeTask(taskId2, "Rejected", authHeaders(USER1.getName()));
+    taskTest.resolveTask(
+        taskId2, new ResolveTask().withNewValue("rejected"), authHeaders(USER1.getName()));
     assertApprovalTask(g2t3, TaskStatus.Closed); // A Request Approval task is opened
     g2t3 = getEntity(g2t3.getId(), authHeaders(USER1.getName()));
     assertEquals(Status.REJECTED, g2t3.getStatus());
@@ -421,6 +443,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     final GlossaryTerm g2t4 = createTerm(glossary2, null, "g2t4");
     assertEquals(Status.DRAFT, g2t4.getStatus());
+    waitForTaskToBeCreated(g2t4.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t4.getId(), authHeaders(USER1.getName())).getStatus());
     assertApprovalTask(g2t4, TaskStatus.Open); // A Request Approval task is opened
 
     // Non reviewer - even Admin - can't change the `Draft` to `Approved` status using PATCH
@@ -441,6 +466,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
     GlossaryTerm g2t5 = createTerm(glossary2, null, "g2t5");
     assertEquals(Status.DRAFT, g2t5.getStatus());
+    waitForTaskToBeCreated(g2t5.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t5.getId(), authHeaders(USER1.getName())).getStatus());
     assertApprovalTask(g2t5, TaskStatus.Open); // A Request Approval task is opened
 
     String origJson = JsonUtils.pojoToJson(g2t5);
@@ -450,6 +478,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
     ChangeDescription change = getChangeDescription(g2t5, MINOR_UPDATE);
     fieldAdded(change, "reviewers", List.of(DATA_CONSUMER_REF));
+    fieldUpdated(change, "status", Status.DRAFT.value(), Status.IN_REVIEW.value());
     g2t5 = patchEntityUsingFqnAndCheck(g2t5, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
     Thread approvalTask1 =
@@ -571,7 +600,8 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   @Test
   void testInheritedPermissionFromParent(TestInfo test) throws IOException {
     // Glossary g has owner dataConsumer
-    Glossary g = createGlossary(getEntityName(test), null, DATA_CONSUMER.getEntityReference());
+    Glossary g =
+        createGlossary(getEntityName(test), null, List.of(DATA_CONSUMER.getEntityReference()));
     // dataConsumer as owner of g can create glossary term t1 under it
     GlossaryTerm t1 =
         createTerm(
@@ -579,11 +609,16 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
             null,
             "t1",
             null,
-            DATA_STEWARD.getEntityReference(),
+            List.of(DATA_STEWARD.getEntityReference()),
             authHeaders(DATA_CONSUMER.getName()));
     // dataSteward who is owner of term t1 can create term t11 under it
     createTerm(
-        g, t1, "t11", null, DATA_STEWARD.getEntityReference(), authHeaders(DATA_STEWARD.getName()));
+        g,
+        t1,
+        "t11",
+        null,
+        List.of(DATA_STEWARD.getEntityReference()),
+        authHeaders(DATA_STEWARD.getName()));
   }
 
   protected Thread assertApprovalTask(GlossaryTerm term, TaskStatus expectedTaskStatus)
@@ -696,8 +731,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   }
 
   @Test
+  @Order(Integer.MAX_VALUE)
   void delete_recursive(TestInfo test) throws IOException {
-    Glossary g1 = createGlossary(test, null, null);
+    Glossary g1 = createGlossary(test, null, emptyList());
 
     // Create glossary term t1 in glossary g1
     GlossaryTerm t1 = createTerm(g1, null, "t1");
@@ -842,6 +878,164 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     assertTrue(isChild, "childGlossaryTerm should be a child of parentGlossaryTerm");
   }
 
+  @Test
+  void get_entityWithDifferentFields_200_OK(TestInfo test) throws IOException {
+    CreateGlossaryTerm create =
+        createRequest(
+            getEntityName(test), "description", "displayName", Lists.newArrayList(USER1_REF));
+    create.setReviewers(List.of(USER1_REF));
+    create.setTags(List.of(USER_ADDRESS_TAG_LABEL, GLOSSARY2_TERM1_LABEL));
+
+    GlossaryTerm entity = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+
+    waitForTaskToBeCreated(entity.getFullyQualifiedName(), 60000L * 3);
+
+    entity = validateGetWithDifferentFields(entity, false);
+    validateEntityReferences(entity.getOwners());
+    assertListNotEmpty(entity.getTags());
+
+    entity = validateGetWithDifferentFields(entity, true);
+    validateEntityReferences(entity.getOwners());
+    assertListNotEmpty(entity.getTags());
+  }
+
+  @Test
+  void get_glossaryTermsWithPagination_200(TestInfo test) throws IOException {
+    // get Pagination results for same name entities
+    boolean supportsSoftDelete = true;
+    int numEntities = 5;
+
+    List<UUID> createdUUIDs = new ArrayList<>();
+    for (int i = 0; i < numEntities; i++) {
+      // Create GlossaryTerms with different parent glossaries
+      CreateGlossary createGlossary =
+          glossaryTest.createRequest("Glossary" + (i + 1), "", "", null);
+      Glossary glossary = glossaryTest.createEntity(createGlossary, ADMIN_AUTH_HEADERS);
+      CreateGlossaryTerm createGlossaryTerm =
+          createRequest("commonTerm", "", "", null)
+              .withRelatedTerms(null)
+              .withGlossary(glossary.getName())
+              .withTags(List.of(PII_SENSITIVE_TAG_LABEL, PERSONAL_DATA_TAG_LABEL))
+              .withReviewers(glossary.getReviewers());
+      GlossaryTerm glossaryTerm = createEntity(createGlossaryTerm, ADMIN_AUTH_HEADERS);
+      createdUUIDs.add(glossaryTerm.getId());
+    }
+
+    CreateGlossary createGlossary = glossaryTest.createRequest("Glossary0", "", "", null);
+    Glossary glossary = glossaryTest.createEntity(createGlossary, ADMIN_AUTH_HEADERS);
+    GlossaryTerm entity =
+        createEntity(
+            createRequest("commonTerm", "", "", null)
+                .withRelatedTerms(null)
+                .withGlossary(glossary.getName())
+                .withTags(List.of(PII_SENSITIVE_TAG_LABEL, PERSONAL_DATA_TAG_LABEL))
+                .withReviewers(glossary.getReviewers()),
+            ADMIN_AUTH_HEADERS);
+    deleteAndCheckEntity(entity, ADMIN_AUTH_HEADERS);
+
+    Predicate<GlossaryTerm> matchDeleted = e -> e.getId().equals(entity.getId());
+
+    // Test listing entities that include deleted, non-deleted, and all the entities
+    for (Include include : List.of(Include.NON_DELETED, Include.ALL, Include.DELETED)) {
+      if (!supportsSoftDelete && include.equals(Include.DELETED)) {
+        continue;
+      }
+      Map<String, String> queryParams = new HashMap<>();
+      queryParams.put("include", include.value());
+
+      // List all entities and use it for checking pagination
+      ResultList<GlossaryTerm> allEntities =
+          listEntities(queryParams, 1000000, null, null, ADMIN_AUTH_HEADERS);
+      Awaitility.await()
+          .atMost(Duration.ofSeconds(1))
+          .until(() -> !allEntities.getData().isEmpty());
+
+      int totalRecords = allEntities.getData().size();
+
+      // List entity with "limit" set from 1 to numEntities size with fixed steps
+      for (int limit = 1; limit < numEntities; limit += 2) { // fixed step for consistency
+        String after = null;
+        String before;
+        int pageCount = 0;
+        int indexInAllTables = 0;
+        ResultList<GlossaryTerm> forwardPage;
+        ResultList<GlossaryTerm> backwardPage;
+        boolean foundDeleted = false;
+        do { // For each limit (or page size) - forward scroll till the end
+          LOG.debug(
+              "Limit {} forward pageCount {} indexInAllTables {} totalRecords {} afterCursor {}",
+              limit,
+              pageCount,
+              indexInAllTables,
+              totalRecords,
+              after);
+          forwardPage = listEntities(queryParams, limit, null, after, ADMIN_AUTH_HEADERS);
+          foundDeleted = forwardPage.getData().stream().anyMatch(matchDeleted) || foundDeleted;
+          after = forwardPage.getPaging().getAfter();
+          before = forwardPage.getPaging().getBefore();
+          assertEntityPagination(allEntities.getData(), forwardPage, limit, indexInAllTables);
+
+          if (pageCount == 0) { // CASE 0 - First page is being returned. There is no before-cursor
+            assertNull(before);
+          } else {
+            // Make sure scrolling back based on before cursor returns the correct result
+            backwardPage = listEntities(queryParams, limit, before, null, ADMIN_AUTH_HEADERS);
+            assertEntityPagination(
+                allEntities.getData(), backwardPage, limit, (indexInAllTables - limit));
+          }
+
+          indexInAllTables += forwardPage.getData().size();
+          pageCount++;
+        } while (after != null);
+
+        boolean includeAllOrDeleted =
+            Include.ALL.equals(include) || Include.DELETED.equals(include);
+        if (includeAllOrDeleted) {
+          assertTrue(!supportsSoftDelete || foundDeleted);
+        } else { // non-delete
+          assertFalse(foundDeleted);
+        }
+
+        // We have now reached the last page - test backward scroll till the beginning
+        pageCount = 0;
+        indexInAllTables = totalRecords - limit - forwardPage.getData().size();
+        foundDeleted = forwardPage.getData().stream().anyMatch(matchDeleted);
+        do {
+          LOG.debug(
+              "Limit {} backward pageCount {} indexInAllTables {} totalRecords {} afterCursor {}",
+              limit,
+              pageCount,
+              indexInAllTables,
+              totalRecords,
+              after);
+          forwardPage = listEntities(queryParams, limit, before, null, ADMIN_AUTH_HEADERS);
+          foundDeleted = forwardPage.getData().stream().anyMatch(matchDeleted) || foundDeleted;
+          before = forwardPage.getPaging().getBefore();
+          assertEntityPagination(allEntities.getData(), forwardPage, limit, indexInAllTables);
+          pageCount++;
+          indexInAllTables -= forwardPage.getData().size();
+        } while (before != null);
+
+        if (includeAllOrDeleted) {
+          assertTrue(!supportsSoftDelete || foundDeleted);
+        } else { // non-delete
+          assertFalse(foundDeleted);
+        }
+      }
+
+      // Before running "deleted" delete all created entries otherwise the test doesn't work with
+      // just one element.
+      if (Include.ALL.equals(include)) {
+        for (GlossaryTerm toBeDeleted : allEntities.getData()) {
+          if (createdUUIDs.contains(toBeDeleted.getId())
+              && Boolean.FALSE.equals(toBeDeleted.getDeleted())) {
+            deleteAndCheckEntity(toBeDeleted, ADMIN_AUTH_HEADERS);
+          }
+        }
+      }
+    }
+  }
+
   public GlossaryTerm createTerm(Glossary glossary, GlossaryTerm parent, String termName)
       throws IOException {
     return createTerm(glossary, parent, termName, glossary.getReviewers());
@@ -850,7 +1044,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   public GlossaryTerm createTerm(
       Glossary glossary, GlossaryTerm parent, String termName, List<EntityReference> reviewers)
       throws IOException {
-    return createTerm(glossary, parent, termName, reviewers, null, ADMIN_AUTH_HEADERS);
+    return createTerm(glossary, parent, termName, reviewers, emptyList(), ADMIN_AUTH_HEADERS);
   }
 
   public GlossaryTerm createTerm(
@@ -858,15 +1052,15 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
       GlossaryTerm parent,
       String termName,
       List<EntityReference> reviewers,
-      EntityReference owner,
+      List<EntityReference> owners,
       Map<String, String> createdBy)
       throws IOException {
     CreateGlossaryTerm createGlossaryTerm =
-        createRequest(termName, "", "", null)
+        createRequest(termName, "d", "", null)
             .withGlossary(getFqn(glossary))
             .withStyle(new Style().withColor("#FF5733").withIconURL("https://img"))
             .withParent(getFqn(parent))
-            .withOwner(owner)
+            .withOwners(owners)
             .withReviewers(reviewers);
     return createAndCheckEntity(createGlossaryTerm, createdBy);
   }
@@ -900,8 +1094,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
         .withDescription("description")
         .withSynonyms(List.of("syn1", "syn2", "syn3"))
         .withGlossary(GLOSSARY1.getName())
-        .withRelatedTerms(Arrays.asList(getFqn(GLOSSARY1_TERM1), getFqn(GLOSSARY2_TERM1)))
-        .withReviewers(List.of(USER1_REF));
+        .withRelatedTerms(Arrays.asList(getFqn(GLOSSARY1_TERM1), getFqn(GLOSSARY2_TERM1)));
   }
 
   @Override
@@ -954,18 +1147,16 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
             ? getEntityByName(term.getFullyQualifiedName(), fields, ADMIN_AUTH_HEADERS)
             : getEntity(term.getId(), fields, ADMIN_AUTH_HEADERS);
     assertListNull(
-        term.getChildren(),
-        term.getRelatedTerms(),
-        term.getReviewers(),
-        term.getOwner(),
-        term.getTags());
+        term.getChildren(), term.getRelatedTerms(), term.getReviewers(), term.getOwners());
+    assertTrue(term.getTags().isEmpty());
 
-    fields = "children,relatedTerms,reviewers,owner,tags";
+    fields = "children,relatedTerms,reviewers,owners,tags";
     term =
         byName
             ? getEntityByName(term.getFullyQualifiedName(), fields, ADMIN_AUTH_HEADERS)
             : getEntity(term.getId(), fields, ADMIN_AUTH_HEADERS);
-    assertListNotNull(term.getRelatedTerms(), term.getReviewers(), term.getOwner(), term.getTags());
+    assertListNotNull(
+        term.getRelatedTerms(), term.getReviewers(), term.getOwners(), term.getTags());
     assertListNotEmpty(term.getRelatedTerms(), term.getReviewers());
     // Checks for other owner, tags, and followers is done in the base class
     return term;
@@ -1133,10 +1324,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
     assertEquals(term1.getChildren().size(), children.size());
 
-    for (int i = 0; i < children.size(); i++) {
-      GlossaryTerm responseChild = children.get(i);
-      GlossaryTerm child = children.get(i);
-      assertTrue(child.getFullyQualifiedName().startsWith(responseChild.getFullyQualifiedName()));
+    for (GlossaryTerm responseChild : children) {
+      assertTrue(
+          responseChild.getFullyQualifiedName().startsWith(responseChild.getFullyQualifiedName()));
     }
 
     GlossaryTerm response = getEntity(term1.getId(), "childrenCount", ADMIN_AUTH_HEADERS);
@@ -1144,14 +1334,16 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   }
 
   public Glossary createGlossary(
-      TestInfo test, List<EntityReference> reviewers, EntityReference owner) throws IOException {
-    return createGlossary(glossaryTest.getEntityName(test), reviewers, owner);
+      TestInfo test, List<EntityReference> reviewers, List<EntityReference> owners)
+      throws IOException {
+    return createGlossary(glossaryTest.getEntityName(test), reviewers, owners);
   }
 
   public Glossary createGlossary(
-      String name, List<EntityReference> reviewers, EntityReference owner) throws IOException {
+      String name, List<EntityReference> reviewers, List<EntityReference> owners)
+      throws IOException {
     CreateGlossary create =
-        glossaryTest.createRequest(name).withReviewers(reviewers).withOwner(owner);
+        glossaryTest.createRequest(name).withReviewers(reviewers).withOwners(owners);
     return glossaryTest.createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
   }
 
